cmake_minimum_required(VERSION 2.8)

PROJECT(example_internal)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR} CACHE STATIC "Module path")
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

SET(NESTK_USE_PCL 1)
SET(NESTK_USE_OPENNI 1)
ADD_SUBDIRECTORY(nestk)
INCLUDE(${NESTK_EMBEDDED_USE_FILE})

ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main nestk)
